data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1267.wast
;; 8. **Invalid Context Restoration Post Imported Function Call**:    - **Description**: Simulate a scenario where an invalid context is presumed restored when returning from an imported function within a `loop`. The loop should either reinitialize correctly or throw appropriate errors.    - **Constraint**: Ensure accurate context handling and error detection in case of invalid context restoration across module boundaries.

(assert_invalid
  (module
    (import "env" "externalFunc" (func $externalFunc (result i32)))
    (func (loop (param i32) (result i32)
      (call $externalFunc)
      (br 0)
    ))
  )
  "type mismatch"
)